--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -440,6 +440,11 @@
     &__icon a
       width: 40px
       height: 40px
+    &__email
+      background-size: 60%
+    &__instagram
+      background-size: 55%
+
   #map-yandex 
     width: 1000px
     max-width: 100%
